// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Snapshots ClassName 1`] = `
<span
  className="sc-bdfBwQ hxGZcl className"
>
  hei
</span>
`;

exports[`Tag Snapshots No props 1`] = `
<span
  className="sc-bdfBwQ hxGZcl"
>
  This is a tag
</span>
`;

exports[`Tag Snapshots no Children 1`] = `
<span
  className="sc-bdfBwQ hxGZcl"
/>
`;
